--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,10 @@
 .App {
   text-align: center;
-  max-width: 100%;
   margin: 0;
   padding: 0;
+  margin-top: 0;
   display: flex;
   position: relative;
-}
-@media only screen and (min-width: 960px) {
-  /* styles for browsers larger than 960px; */
-}
-@media only screen and (min-width: 1440px) {
-  /* styles for browsers larger than 1440px; */
-}
-@media only screen and (min-width: 2000px) {
-  /* for sumo sized (mac) screens */
-}
-@media only screen and (max-device-width: 480px) {
- /* styles for mobile browsers smaller than 480px; (iPhone) */
-}
-@media only screen and (device-width: 768px) {
- /* default iPad screens */
-}
-/* different techniques for iPad screening */
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-/* For portrait layouts only */
-}
-
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-/* For landscape layouts only */
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  max-width: 100%;
+  max-height: 100vh;
 }
